cluster/apps/ytdl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ytdl
  labels:
    app.kubernetes.io/name: ytdl
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ytdl
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ytdl
    spec:
      securityContext:
        fsGroup: 100
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: pinchflat
          image: ghcr.io/kieraneglin/pinchflat:latest
          securityContext:
            runAsUser: 99
            runAsGroup: 100
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 8945
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: downloads
              mountPath: /downloads
            - name: config
              mountPath: /config
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: ytdl-downloads-pvc
        - name: config
          persistentVolumeClaim:
            claimName: ytdl-config-pvc
