cluster/apps/ytdl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ytdl
  labels:
    app.kubernetes.io/name: ytdl
spec:
  type: ClusterIP
  ports:
    - port: 3033
      targetPort: 3033
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ytdl
