cluster/apps/ytdl/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ytdl
  namespace: media
  annotations:
    gethomepage.dev/description: Youtube DL WebUI
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media Management
    gethomepage.dev/icon: sh-youtube-dl
    gethomepage.dev/name: YTDL
    gethomepage.dev/pod-selector: app.kubernetes.io/name=ytdl
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway
  hostnames:
    - ytdl.internal.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: ytdl
          port: 8945
          weight: 1
